--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,4 @@
 body {
-    border: 4px solid black;
     margin: 0;
 }
 
@@ -14,6 +13,53 @@ h3,h2 {
     margin: 0;
     align-self: center;
 }
+
+.menu {
+    cursor: pointer;
+    position: relative;
+    display: inline-block;
+}
+
+
+/* toggle menu */
+
+.menuBox {
+    display: flex;
+    justify-content: center;
+}
+
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+    cursor: pointer;
+  }
+
+  
+  .dropdown-content {
+    
+    margin-top: 4px;
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    width: 90%;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {background-color: #f1f1f1}
+  
+  .show {display:block;}
+
+/* toggle menu end */
 
 
 
