--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,65 +1,216 @@
-body {
+/*** Mixins & Default Styles ***/
+* {
+    box-sizing: border-box;
     margin: 0;
-}
-
-.header {
+    padding: 0;
+  }
+  
+  body {
+    overflow-x: hidden;
+    overflow-y: scroll;
+  }
+  
+  /*** Color Variables ***/
+  /*** Centering Hack ***/
+  /*** Header Styles ***/
+  header {
+    width: 100vw;
+    /* height: 100vh; */
+    background: #5661f2;
     display: flex;
-    justify-content: space-between;
-    padding: 10px;
-}
-
-h3,h2 {
-    border: 2px solid blue;
-    margin: 0;
-    align-self: center;
-}
-
-.menu {
+  }
+  
+  /*** Navigation Styles ***/
+  nav {
+    width: 100vw;
+    height: 160px;
+    background: #46b2f0;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    position: fixed;
+    z-index: 10;
+    transition: all 0.3s;
+  }
+  nav.navShadow {
+    box-shadow: 0 4px 30px -5px rgba(0, 0, 0, 0.2);
+    height: 100px;
+  }
+  nav.navShadow #word-mark {
+    opacity: 0;
+  }
+  
+  #brand,
+  #menu,
+  ul {
+    display: flex;
+    align-items: center;
+  }
+  
+  #brand {
+    padding-left: 40px;
+  }
+  
+  #logo {
+    /* width: 55px;
+    height: 55px;
+    background: #fff;
+    border-radius: 50%; */
+    
     cursor: pointer;
-    position: relative;
-    display: inline-block;
-}
-
-
-/* toggle menu */
-
-.menuBox {
+  }
+  
+  #word-mark {
+    width: auto;
+    height: 20px;
+    
+    
+    margin-left: 20px;
+    opacity: 1;
+    transition: all 0.3s;
+  }
+  
+  /*** Menu Styles ***/
+  #menu {
+    justify-content: flex-end;
+    padding-right: 40px;
+  }
+  
+  li {
+    margin-left: 20px;
+  }
+  
+  /* li a {} */
+  
+  #menu-toggle {
+    width: 55px;
+    height: 55px;
+    background: #2ea8ee;
     display: flex;
     justify-content: center;
-}
-
-.dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
+    align-items: center;
+    border-radius: 50%;
     cursor: pointer;
-  }
-
-  
-  .dropdown-content {
-    
-    margin-top: 4px;
     display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    width: 90%;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  }
+  #menu-toggle:hover .bar {
+    width: 25px;
+  }
+  #menu-toggle.closeMenu .bar {
+    width: 25px;
+  }
+  #menu-toggle.closeMenu .bar:first-child {
+    -webkit-transform: translateY(7px) rotate(45deg);
+            transform: translateY(7px) rotate(45deg);
+  }
+  #menu-toggle.closeMenu .bar:nth-child(2) {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+  }
+  #menu-toggle.closeMenu .bar:last-child {
+    -webkit-transform: translateY(-7px) rotate(-45deg);
+            transform: translateY(-7px) rotate(-45deg);
   }
   
-  .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
+  .bar {
+    width: 25px;
+    height: 2px;
+    background: #fff;
+    transition: 0.3s ease-in-out;
+  }
+  .bar:nth-child(2) {
+    width: 20px;
+    margin: 5px 0;
+  }
+  .bar:last-child {
+    width: 15px;
   }
   
-  .dropdown-content a:hover {background-color: #f1f1f1}
+  /*** Hero Section Styles ***/
+  #hero-section {
+    width: 100vw;
+    /* height: calc(100vh - 400px); */
+    height: 200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 160px;
+    /* border: 1px solid black; */
+  }
   
-  .show {display:block;}
-
-/* toggle menu end */
-
-
-
+  
+  
+  
+  
+  /*** Section Styles ***/
+  section {
+    width: 100vw;
+    height: calc(100vh - 100px);
+    display: flex;
+    justify-content: center;
+  }
+  section:nth-child(odd) {
+    background: #fa6c98;
+  }
+  section:nth-child(even) {
+    background: #79edfc;
+  }
+  
+  #heading {
+    width: 120px;
+    height: 20px;
+    margin-top: 40px;
+  }
+  
+  /*** Responsive Menu For Smaller Device ***/
+  @media screen and (max-width: 767px) {
+    #menu-toggle {
+      display: flex;
+    }
+  
+    ul {
+      display: inline-block;
+      width: 100vw;
+      height: 0;
+      background: #79edfc;
+      position: absolute;
+      top: 160px;
+      
+      left: 0;
+    }
+    ul.showMenu {
+      height: 250px;
+    }
+    ul.showMenu li {
+      height: 80px;
+      opacity: 1;
+      visibility: visible;
+    }
+  
+    li {
+      width: 50%;
+      height: 80px;
+      float: left;
+      padding-left: 40px;
+      opacity: 0;
+      visibility: hidden;
+      margin-left: 0;
+      transition: all 0.3s 0.1s;
+    }
+    li:first-child, li:nth-child(2) {
+      margin-top: 80px;
+    }
+  
+    #head-line {
+      -webkit-transform: scale(0.8);
+              transform: scale(0.8);
+    }
+  }
+  #youtube {
+    position: fixed;
+    right: 2vw;
+    bottom: 2vh;
+    font-size: 30px;
+    color: #fff;
+  }
+  
