--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,7 @@
   
   li {
     margin-left: 20px;
+    list-style: none;
   }
   
   /* li a {} */
@@ -138,7 +139,9 @@
     /* border: 1px solid black; */
   }
   
-  
+  #heading {
+    text-align: center;
+  }
   
   
   
@@ -161,14 +164,70 @@
     height: 20px;
     margin-top: 40px;
   }
+
+  #head-line {
+    font-size: 25px;
+  }
+
+  /* menu toggle */
+
+  .menu-toggle {
+    cursor: pointer;
+  }
+
+  .menu-box {
+    /* border: 1px solid; */
+    height: 500px;
+    position: absolute;
+    top: 160px;
+    left: 0;
+    right: 0;
+    opacity: 0;
+    transition: 0.5s;
+    width: 100%;
+    background-color: #fff;
+  }
+
+  .menu-box.showMenu {
+    opacity: 1;
+  }
   
+  .overflow-y {
+    overflow-y: hidden;
+  }
+
+  .menu-container {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 25px;
+  }
+
+  .menu-box-heading {
+    margin-top: 20px;
+  }
+
+  /* menu toggle end */
+  
+
   /*** Responsive Menu For Smaller Device ***/
   @media screen and (max-width: 767px) {
     #menu-toggle {
       display: flex;
     }
+
+    #head-line {
+      font-size: 22.5px;
+      text-align: center;
+    }
+
+    .menu-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      /* justify-content: space-between; */
+    }
   
-    ul {
+    /* ul {
       display: inline-block;
       width: 100vw;
       height: 0;
@@ -200,17 +259,17 @@
     li:first-child, li:nth-child(2) {
       margin-top: 80px;
     }
-  
+   */
+
     #head-line {
       -webkit-transform: scale(0.8);
               transform: scale(0.8);
     }
+
+    .menu-toggle {
+      display: none;
+    }
+
   }
-  #youtube {
-    position: fixed;
-    right: 2vw;
-    bottom: 2vh;
-    font-size: 30px;
-    color: #fff;
-  }
+
   
